maior e menor trocado

--- a/Galeria.html
+++ b/Galeria.html
@@ -12,8 +12,8 @@
         <button id="BotaoSearch" onclick="loadPhotos()">Search</button>   
         <select id="Order" oninput="loadPhotos()">
             <option value="nome">A a Z</option>
-            <option value="preco">Maior Preço</option>
-            <option value="preco&direction=desc">Menor Preço</option>
+            <option value="preco">Menor Preço</option>
+            <option value="preco&direction=desc">Maior Preço</option>
         </select>
     </div>
     <div class="Fotos">
